--- a/Tester/Web/Test.htm
+++ b/Tester/Web/Test.htm
@@ -16,7 +16,7 @@
 	<input type="input" id="txtIP" value="192.168.127.100:8089" /><input type="input" id="txtPath" value="echo" size="10" /><button id='btnConnect'><span>連線</span></button><br />
 	<input type="input" id="txtMsg" /><button id='btnSend'>傳送</span></button>
 	<button id='btnDisconnect'><span>斷線</span></button><br />
-	<textarea id="Log" rows="10" cols="80" />
+	<textarea id="Log" rows="10" cols="80"></textarea>
 	<div id="MsgCell" class="load" />
 	</body>
 	<script type="text/javascript">
@@ -34,14 +34,14 @@
 			// OPEN			1	連線已打開，可以進行通訊。
 			// CLOSING		2	連線正在進行關閉程序。
 			// CLOSED		3	連線已關閉／連線不能打開。
-//			if (ws == null || ws.readyState != 1) {
-//				writeLog('# Connection is not create...')
-//			} else {
-				try {
-					ws.send($('#txtMsg').val());
-					writeLog('# Message is sent...');
-				} catch (e) { log(e); }
-//			}
+			//			if (ws == null || ws.readyState != 1) {
+			//				writeLog('# Connection is not create...')
+			//			} else {
+			try {
+				ws.send($('#txtMsg').val());
+				writeLog('# Message is sent...');
+			} catch (e) { log(e); }
+			//			}
 		});
 		$('#btnDisconnect').click(function () {
 			if (ws != null && ws.readyState == 1)
@@ -62,7 +62,7 @@
 			ws = new WebSocket('ws://' + $('#txtIP').val() +'/' + $('#txtPath').val());
 			ws.onopen = function() {
 				// Web Socket is connected, send data using send()
-				writeLog(" # Connection is opened");
+				writeLog("# Connection is opened");
 			};
 
 			ws.onmessage = function (evt) { 
