--- a/Tester/Web/Test.htm
+++ b/Tester/Web/Test.htm
@@ -13,9 +13,9 @@
 			<td align="right"></td></tr>
 		</table>
 	</div>
-	<input type="input" id="txtIP" value="192.168.127.100:8089" /><input type="input" id="txtPath" value="echo" size="10" /><button id='btnConnect'><span>連線</span></button><br />
-	<input type="input" id="txtMsg" /><button id='btnSend'>傳送</span></button>
-	<button id='btnDisconnect'><span>斷線</span></button><br />
+	<input type="input" id="txtIP" value="192.168.127.100:8089" /><input type="input" id="txtPath" value="echo" size="10" /><button id='btnConnect'>連線</button><br />
+	<input type="input" id="txtMsg" /><button id='btnSend'>傳送</button>
+	<button id='btnDisconnect'>斷線</button><br />
 	<textarea id="Log" rows="10" cols="80"></textarea>
 	<div id="MsgCell" class="load" />
 	</body>
